Subo ejercicios 3 del Bootcamp JAVA